client/app/style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap');

@unocss;

:root {
  @apply bg-zinc-50 dark:bg-neutral-900;
  font-family: 'Inter', system-ui, sans-serif;
  color-scheme: light dark;
  font-size: 14px;
}

.text-secondary {
  @apply text-zinc-500 dark:text-neutral-400;
}

.font-mono {
  font-family: 'JetBrains Mono', monospace;
}

select {
  @apply border-0;
  background-position: right 0.1rem center;
}

input {
  @apply !border-0;
}

.container {
  @apply px-4;
}

